--- a/Projekt/Database/Database.csproj
+++ b/Projekt/Database/Database.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Entities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Repositories.cs" />
+    <Compile Include="Repositories\UserInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
